--- a/index.html
+++ b/index.html
@@ -1,32 +1,76 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Student project UT 2023</title>
-  <!-- You can add your own CSS or link to external stylesheets here -->
+  <title>Product Pipeline</title>
+  <link rel="stylesheet" type="text/css" href="styles.css">
   <style>
     body {
-      font-family: Arial, sans-serif;
+      background-image: url('background.png');
+      background-repeat: no-repeat;
+      background-size: cover;
     }
   </style>
 </head>
 <body>
   <header>
-    <h1>Student project UT 2023</h1>
+    <h1>Product Pipeline</h1>
   </header>
-  <main>
-    <section>
-      <h2>About the Project</h2>
-      <p>
-        Write a brief introduction to your project, its purpose, and its results.
-      </p>
-    </section>
-    <!-- Add more sections for different parts of your project -->
-  </main>
-  <footer>
-    <p>Mario Käära</p>
-  </footer>
-  <!-- You can add your own JavaScript or link to external scripts here -->
+  
+  <section id="pipeline">
+    <h2>Pipeline Steps</h2>
+    <div class="pipeline-flow">
+      <div class="step">
+        <div class="step-content">
+          <span class="step-number">1</span>
+          <p>Raw Dataset</p>
+        </div>
+      </div>
+      <div class="step">
+        <div class="step-content">
+          <span class="step-number">2</span>
+          <p>Preprocessing Data</p>
+        </div>
+      </div>
+      <div class="step">
+        <div class="step-content">
+          <span class="step-number">3</span>
+          <p>Training Machine Learning Models</p>
+        </div>
+      </div>
+      <div class="step">
+        <div class="step-content">
+          <span class="step-number">4</span>
+          <p>Making Predictions</p>
+        </div>
+      </div>
+      <div class="step">
+        <div class="step-content">
+          <span class="step-number">5</span>
+          <p>Calculating Model-Based Feature Importance</p>
+        </div>
+      </div>
+      <div class="step">
+        <div class="step-content">
+          <span class="step-number">6</span>
+          <p>Saving Most Important Features to Database</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  
+  <section id="access-management">
+    <h2>Site Access Management System</h2>
+    <p>
+      Employees enter the worksite and use the site access management system with their access cards. The employee data is merged with the data of the most important features.
+    </p>
+  </section>
+  
+  <section id="kpi-dashboard">
+    <h2>KPI Dashboard</h2>
+    <p>
+      The safety manager can view operational safety information in real-time through the KPI dashboard. This allows them to make informed decisions and take necessary actions to prevent accidents.
+    </p>
+  </section>
 </body>
 </html>
+
