--- a/index.html
+++ b/index.html
@@ -247,20 +247,22 @@
     
     <!-- ***** Footer Start ***** -->
     <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 col-md-12 col-sm-12">
-                    <ul class="social">
-                        <li><a href="www.linkedin.com/in/mariokaara"><i class="fa fa-linkedin"></i></a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p class="copyright">Source files available at: github.com/mariokaara/Student_Project_Contest_UT_2023</p>
-                </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-12">
+                <ul class="social">
+                    <li><a href="https://www.linkedin.com/in/your-profile-url"><i class="fa fa-linkedin"></i></a></li>
+                </ul>
             </div>
         </div>
+        <div class="row">
+            <div class="col-lg-12">
+                <p class="copyright">Student Project Contest 2023 source files available at:
+                    <a href="https://github.com/mariokaara/Student_Project_Contest_UT_2023">https://github.com/mariokaara/Student_Project_Contest_UT_2023</a>
+                </p>
+            </div>
+        </div>
+    </div>
     </footer>
     
     <!-- jQuery -->
