--- a/index.html
+++ b/index.html
@@ -251,14 +251,15 @@
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12">
                 <ul class="social">
-                    <li><a href="https://www.linkedin.com/in/your-profile-url"><i class="fa fa-linkedin"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/mariokaara"><i class="fa fa-linkedin"></i></a></li>
                 </ul>
             </div>
         </div>
         <div class="row">
             <div class="col-lg-12">
-                <p class="copyright">Student Project Contest 2023 source files available at:
-                    <a href="https://github.com/mariokaara/Student_Project_Contest_UT_2023">https://github.com/mariokaara/Student_Project_Contest_UT_2023</a>
+                <p class="source-files">
+                    Student Project Contest 2023 source files available at:
+                    <a href="https://github.com/mariokaara/Student_Project_Contest_UT_2023">github.com/mariokaara/Student_Project_Contest_UT_2023</a>
                 </p>
             </div>
         </div>
