--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
             <div class="col-lg-12">
                 <p class="source-files">
                     Student Project Contest 2023 source files available at:
-                    <a href="https://github.com/mariokaara/Student_Project_Contest_UT_2023">github.com/mariokaara/Student_Project_Contest_UT_2023</a>
+                    <a href="https://github.com/mariokaara/Student_Project_Contest_UT_2023">https://github.com/mariokaara/Student_Project_Contest_UT_2023</a>
                 </p>
             </div>
         </div>
