--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,500,700,900" rel="stylesheet">
 
-    <title>Student Project Contest 2023</title>
+    <title>Student Project Contest 2023 - ProtectWise</title>
 <!--
 
 -->
@@ -48,11 +48,10 @@
                     </a>
                     <!-- ***** Logo End ***** -->
                     <!-- ***** Menu Start ***** -->
-                    <ul class="nav justify-content-center"> <!-- Added "justify-content-center" class -->
+                    <ul class="nav justify-content-center">
                         <li><a href="#welcome" class="active">Home</a></li>
-                        <li><a href="#features">About</a></li>
-                        <li><a href="#work-process">Work Process</a></li>
-                        <li><a href="#contact-us">Contact Us</a></li>
+                        <li><a href="#features">Value</a></li>
+                        <li><a href="#work-process">Workflow</a></li>
                     </ul>
                     <a class='menu-trigger'>
                         <span>Menu</span>
@@ -73,9 +72,8 @@
             <div class="container">
                 <div class="row">
                     <div class="offset-xl-3 col-xl-6 offset-lg-2 col-lg-8 col-md-12 col-sm-12">
-                        <h1>We provide the best <strong>strategy</strong><br>to grow up your <strong>business</strong></h1>
-                        <p>Softy Pinko is a professional Bootstrap 4.0 theme designed by Template Mo 
-                        for your company at absolutely free of charge</p>
+                        <h1>Leverage <strong>data-driven</strong> insights to proactively identify,<br>manage, and <strong>mitigate potential risks</strong> for individual<br>employees and teams in <strong>real-time</strong></h1>
+                        <p>ProtectWise is a specialized solution designed for experts dedicated to safeguarding the well-being and safety of employees in the workplace.</p>
                         <a href="#features" class="main-button-slider">Discover More</a>
                     </div>
                 </div>
@@ -97,8 +95,8 @@
                                 <div class="icon">
                                     <i><img src="assets/images/featured-item-01.png" alt=""></i>
                                 </div>
-                                <h5 class="features-title">Modern Strategy</h5>
-                                <p>Customize anything in this template to fit your website needs</p>
+                                <h5 class="features-title">Innovative Strategy</h5>
+                                <p>Cutting-edge machine learning techniques with real-time data integration</p>
                             </div>
                         </div>
                         <!-- ***** Features Small Item End ***** -->
@@ -109,8 +107,8 @@
                                 <div class="icon">
                                     <i><img src="assets/images/featured-item-01.png" alt=""></i>
                                 </div>
-                                <h5 class="features-title">Best Relationship</h5>
-                                <p>Contact us immediately if you have a question in mind</p>
+                                <h5 class="features-title">Competitiveness</h5>
+                                <p>Significantly enhanced competitiveness through improved workforce safety</p>
                             </div>
                         </div>
                         <!-- ***** Features Small Item End ***** -->
@@ -121,8 +119,8 @@
                                 <div class="icon">
                                     <i><img src="assets/images/featured-item-01.png" alt=""></i>
                                 </div>
-                                <h5 class="features-title">Ultimate Marketing</h5>
-                                <p>You just need to tell your friends about our free templates</p>
+                                <h5 class="features-title">Productivity</h5>
+                                <p>Secure work environment that promotes productivity and employee satisfaction</p>
                             </div>
                         </div>
                         <!-- ***** Features Small Item End ***** -->
@@ -143,10 +141,10 @@
                 <div class="col-lg-1"></div>
                 <div class="col-lg-6 col-md-12 col-sm-12 align-self-center mobile-top-fix">
                     <div class="left-heading">
-                        <h2 class="section-title">Let’s discuss about you project</h2>
+                        <h2 class="section-title">Optimized Safety Management</h2>
                     </div>
                     <div class="left-text">
-                        <p>Nullam sit amet purus libero. Etiam ullamcorper nisl ut augue blandit, at finibus leo efficitur. Nam gravida purus non sapien auctor, ut aliquam magna ullamcorper.</p>
+                        <p>Our first value proposition streamlines safety managers' responsibilities by minimizing non-essential tasks, allowing them to engage in valuable conversations with workers. This fosters a safety-conscious culture and promotes open dialogue about workplace hazards, enabling safety managers to proactively address concerns and improve safe working practices, ultimately leading to a more secure and productive work environment.</p>
                     </div>
                 </div>
             </div>
@@ -165,10 +163,10 @@
             <div class="row">
                 <div class="col-lg-6 col-md-12 col-sm-12 align-self-center mobile-bottom-fix">
                     <div class="left-heading">
-                        <h2 class="section-title">We can help you to grow your business</h2>
+                        <h2 class="section-title">Real-Time Hazard Response</h2>
                     </div>
                     <div class="left-text">
-                        <p>Aenean pretium, ipsum et porttitor auctor, metus ipsum iaculis nisi, a bibendum lectus libero vitae urna. Sed id leo eu dolor luctus congue sed eget ipsum. Nunc nec luctus libero. Etiam quis dolor elit.</p>
+                        <p>The second value proposition emphasizes the ability of safety managers to interact with real-time work environments, enabling them to swiftly respond and take action where it is most needed, ensuring timely and effective mitigation of potential hazards and fostering a safer workplace for all employees.</p>
                     </div>
                 </div>
                 <div class="col-lg-1"></div>
@@ -187,54 +185,55 @@
                 <div class="row">
                     <div class="offset-lg-3 col-lg-6">
                         <div class="info">
-                            <h1>Work Process</h1>
-                            <p>Aenean nec tempor metus. Maecenas ligula dolor, commodo in imperdiet interdum, vehicula ut ex. Donec ante diam.</p>
+                            <h1>Workflow</h1>
+                            <p>ProtectWise streamlines occupational safety by preprocessing raw data on Estonian occupational accidents, focusing on specific occupations within designated economic sectors. We then train machine learning models on this refined data, which is integrated with site access management information to match real employee occupation types. The result is a comprehensive display of operational and dynamic risk levels for both individuals and teams, providing safety managers with crucial insights for enhanced workplace safety through our central controlling unit.</p>
                         </div>
                     </div>
                 </div>
 
                 <!-- ***** Mini Box Start ***** -->
+
                 <div class="row">
                     <div class="col-lg-2 col-md-3 col-sm-6 col-6">
                         <a href="#" class="mini-box">
                             <i><img src="assets/images/work-process-item-01.webp" alt=""></i>
-                            <strong>Get Ideas</strong>
-                            <span>Godard pabst prism fam cliche.</span>
+                            <strong>Raw Data Collection</strong>
+                            <span>Collecting and preprocessing raw accident data</span>
                         </a>
                     </div>
                     <div class="col-lg-2 col-md-3 col-sm-6 col-6">
                         <a href="#" class="mini-box">
                             <i><img src="assets/images/work-process-item-01.webp" alt=""></i>
-                            <strong>Sketch Up</strong>
-                            <span>Godard pabst prism fam cliche.</span>
+                            <strong>Model Training</strong>
+                            <span>Training ML models and identifying important features</span>
                         </a>
                     </div>
                     <div class="col-lg-2 col-md-3 col-sm-6 col-6">
                         <a href="#" class="mini-box">
                             <i><img src="assets/images/work-process-item-01.webp" alt=""></i>
-                            <strong>Discuss</strong>
-                            <span>Godard pabst prism fam cliche.</span>
+                            <strong>Site Data Collection</strong>
+                            <span>Collecting data from site access management system</span>
                         </a>
                     </div>
                     <div class="col-lg-2 col-md-3 col-sm-6 col-6">
                         <a href="#" class="mini-box">
                             <i><img src="assets/images/work-process-item-01.webp" alt=""></i>
-                            <strong>Revise</strong>
-                            <span>Godard pabst prism fam cliche.</span>
+                            <strong>Data Integration</strong>
+                            <span>Integrating site access data with ML model predictions</span>
                         </a>
                     </div>
                     <div class="col-lg-2 col-md-3 col-sm-6 col-6">
                         <a href="#" class="mini-box">
                             <i><img src="assets/images/work-process-item-01.webp" alt=""></i>
-                            <strong>Approve</strong>
-                            <span>Godard pabst prism fam cliche.</span>
+                            <strong>Data Analysis</strong>
+                            <span>Analyzing integrated data and extracting insights for taking action </span>
                         </a>
                     </div>
                     <div class="col-lg-2 col-md-3 col-sm-6 col-6">
                         <a href="#" class="mini-box">
                             <i><img src="assets/images/work-process-item-01.webp" alt=""></i>
-                            <strong>Launch</strong>
-                            <span>Godard pabst prism fam cliche.</span>
+                            <strong>Insights Display</strong>
+                            <span>Displaying work safety data on central unit's display</span>
                         </a>
                     </div>
                 </div>
@@ -246,25 +245,24 @@
 
     
     <!-- ***** Footer Start ***** -->
+
     <footer>
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 col-md-12 col-sm-12">
-                <ul class="social">
-                    <li><a href="https://www.linkedin.com/in/mariokaara"><i class="fa fa-linkedin"></i></a></li>
-                </ul>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12">
+                    <ul class="social">
+                        <li><a href="https://www.linkedin.com/in/mariokaara"><i class="fa fa-linkedin"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <p class="copyright">Protectwise source files available at: https://github.com/mariokaara/Student_Project_Contest_UT_2023</p>
+                </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-lg-12">
-                <p class="source-files">
-                    Student Project Contest 2023 source files available at:
-                    <a href="https://github.com/mariokaara/Student_Project_Contest_UT_2023">https://github.com/mariokaara/Student_Project_Contest_UT_2023</a>
-                </p>
-            </div>
-        </div>
-    </div>
     </footer>
+
     
     <!-- jQuery -->
     <script src="assets/js/jquery-2.1.0.min.js"></script>
