--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <div class="container">
                 <div class="row">
                     <div class="offset-xl-3 col-xl-6 offset-lg-2 col-lg-8 col-md-12 col-sm-12">
-                        <h1>Leverage <strong>data-driven</strong> insights to proactively identify,<br>manage, and <strong>mitigate potential risks</strong> for individual<br>employees and teams in <strong>real-time</strong></h1>
+                        <h1><strong>ProtectWise</strong><br>Leverage <strong>data-driven</strong> insights to proactively identify,<br>manage, and <strong>mitigate potential risks</strong> for individual<br>employees and teams in <strong>real-time</strong></h1>
                         <p>ProtectWise is a specialized solution designed for experts dedicated to safeguarding the well-being and safety of employees in the workplace.</p>
                         <a href="#features" class="main-button-slider">Discover More</a>
                     </div>
